@@ -113,7 +113,7 @@ void free_player(player *pl) {
 /* find_skill() - looks for the skill and returns a pointer to it if found */
 
 object *find_skill(object *op, int skillnr) {
-  object *tmp;
+    object *tmp, *skill1=NULL;
 #ifdef LINKED_SKILL_LIST
   objectlink *obl;
 
@@ -123,11 +123,13 @@ object *find_skill(object *op, int skillnr) {
   } 
 #endif
 
-  /* *sigh*; we didnt find it. Perhaps because the skill we requested
-   * is an unapplied tool. Lets search entire inventory */
-  for(tmp=op->inv;tmp;tmp=tmp->below) 
-    if(tmp->type==SKILL&&tmp->stats.sp==skillnr) 
-		return tmp;
-
-  return ((object *) NULL); 
+    /* *sigh*; we didnt find it. Perhaps because the skill we requested
+     * is an unapplied tool. Lets search entire inventory */
+    for (tmp=op->inv;tmp;tmp=tmp->below) {
+	if(tmp->type==SKILL&&tmp->stats.sp==skillnr) {
+	    if (tmp->invisible) return tmp;
+	    else skill1=tmp;
+	}
+    }
+    return skill1;
 }
